name:                dispatch-base
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Lupino/dispatch-base#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag user
    description: Enable user datasource
    default: False
    manual: True

flag coin
    description: Enable coin datasource
    default: False
    manual: True

library
  hs-source-dirs:      src
  if flag(user)
    exposed-modules: Dispatch.Types.User
                   , Dispatch.DS.HTTP.User
                   , Dispatch.DS.User
                   , Dispatch.API.User
    build-depends: hashable
                 , haxl
                 , async
  if flag(coin)
    exposed-modules: Dispatch.Types.Coin
                   , Dispatch.DS.HTTP.Coin
                   , Dispatch.DS.Coin
                   , Dispatch.API.Coin
    build-depends: hashable
                 , haxl
                 , async
  exposed-modules:     Dispatch.Base
                     , Dispatch.Types.Internal
                     , Dispatch.Utils.Wreq
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , aeson
                     , http-types
                     , wreq
                     , http-client
                     , lens
                     , dispatch-common
                     , unix-time
                     , unordered-containers
  default-language:    Haskell2010

test-suite dispatch-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dispatch-base
                     , haxl
                     , aeson
                     , text
                     , dispatch-common
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/dispatch
