name:                yuntan-base-coin
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Lupino/yuntan-base#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Yuntan.Types.Coin
                     , Yuntan.DS.HTTP.Coin
                     , Yuntan.DS.Coin
                     , Yuntan.API.Coin
  build-depends:       base >= 4.7 && < 5
                     , haxl
                     , async
                     , hashable
                     , aeson
                     , text
                     , unordered-containers
                     , yuntan-base
                     , wreq-helper
                     , aeson-result
                     , bytestring
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/Lupino/yuntan-base
