name:                yuntan-base-test
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Lupino/yuntan-base#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

test-suite yuntan-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , yuntan-base
                     , haxl
                     , aeson
                     , text
                     , yuntan-common-list-result
                     , yuntan-common-result
                     , yuntan-base-coin
                     , yuntan-base-user
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/yuntan-base
