name:                yuntan-base
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Lupino/yuntan-base#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Yuntan.Base
                     , Yuntan.Types.Internal
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , aeson
                     , http-types
                     , wreq
                     , http-client
                     , lens
                     , unix-time
                     , unordered-containers
                     , MissingH
                     , http-client-tls
                     , yuntan-common-signature
                     , yuntan-common-wreq
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/yuntan-base
